src/App.css
#root {
  /* margin: 0 auto; */
  /* padding: 2rem; */
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.greeting {
  font-size: 5em;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.4);
  text-decoration-line: underline;
}
/* .main-container {  
  display: flex;
} */
.main-content {
  display: flex;
  gap: 0.5em;
  width: 100%;
  padding: 0.5em;
  height: calc(100vh - 69px);
  flex-grow: 1;
  /* overflow-x: scroll; */
}
.center-content {
  flex-grow: 1;
  overflow: auto;
}
/* Header */
.top-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.logo-container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

